--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title></title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,500i,700,900&amp;subset=cyrillic" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+
 <style type="text/css">
 body {
   margin:0;
@@ -16,6 +17,7 @@ body {
   background-color: rgb(30,30,30);
 }
 #first {
+  font-family: 'Roboto Condensed', sans-serif;
   position:fixed;
   top:-50vh;
   -webkit-filter: blur(55px);
