preloader ready, all source images are in sources/cont. Preloader integration.

--- a/stopDatShit.html
+++ b/stopDatShit.html
@@ -3,9 +3,8 @@
 <head>
   <title>stratification</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
 <style type='text/css'>
 :root {
   --scrollData;
@@ -97,10 +96,10 @@ header {
   transition: top 900ms ease-out 800ms;
 }
 #secondaryCoverCont svg {
-  filter:contrast(1) saturate(0);
+  /*filter:contrast(1) saturate(0);
   -webkit-filter: contrast(1) saturate(0) ;
   transform: translate3d(0,0,0);
-  -webkit-transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);*/
 }
 #secondaryCoverCont svg use{
   opacity: .05;
@@ -372,6 +371,7 @@ svg {
   <svg viewBox='0 625 1920 1080' preserveAspectRatio='xMidYMax meet'>
     <defs>
     <filter id='mainCoverFilter'>
+
     </filter>
       <mask id='mainSliderMask'>
         <path d='m 477,-370 l 966,0 21,469 -1008,0 z' fill='white'/>
