--- a/index.html
+++ b/index.html
@@ -1,94 +1,582 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+  <title>stratification</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-
-<style type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
+<style type='text/css'>
+:root {
+  --scrollData;
+}
+#cashCont img {
+  width: 1px;
+  height: 1px;
+}
 body {
   margin:0;
   padding:0;
-  background-color:rgb(215,220,215);
-  overflow-x:hidden;
+  width:100vw;
+  height:114vw;
+  background-color:rgb(0,0,0);
+  overflow:hidden;
 }
-#cont {
-  width:100%;
-  background-color: rgb(30,30,30);
-}
-#first {
-  font-family: 'Roboto Condensed', sans-serif;
+header {
   position:fixed;
-  top:-50vh;
-  -webkit-filter: blur(55px);
+  z-index:4;
+  background-color: rgb(70,70,70);
+  width:100%;
+  height:3.33vw;
+  top:-3.33vw;
+  transition: top 500ms ease-out;
+  color:white;
+  font-weight: 800;
+  font-size:3vw;
+}
+.headerIn {
+  top:0vw;
+}
+#topHeaderFragment {
+  margin:0;
+  padding:0;
+  height:1.11vw;
+  width:100%;
+  background-image: url(images/headerCoverFirst.png);
+  background-size: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+#bottomHeaderFragment {
+  margin:0;
+  padding:0;
+  height:2.22vw;
+  width:100%;
+  background-image: url(images/headerCoverSecond.png);
+  background-size: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+
+}
+#mainWrapper {
+  width:100%;
+  height: 114vw;
+  overflow:hidden;
+  z-index:0;
+  /*background-image: url(sltv_main_12.jpg);
+  background-size: 100%;*/
+}
+#mainCoverCont {
+  position:fixed;
+  z-index:0;
+  width:100vw;
+  height:114vw;
+  /*top:-50vw;*/
+  overflow:hidden;
+  filter: blur(45px);
+  transform: translate3d(0,0,0);
+  -webkit-filter: blur(45px);
   -webkit-transform: translate3d(0,0,0);
 }
-#coverBlur {
-  width:100%;
-  overflow:hidden;
+/*.unhideMainCover {
+  transition: top 600ms ease-out 400ms;
+  top:0vw !important;
+}*/
+.slidesPreloading {
+  display: none;
 }
-#coverBlur img {
-  width:100vw;
-  height:auto;
-  left:0vw;
-  z-index:0;
+.slidesPreLoading:nth-child(1) {
+  display: inline;
 }
-#second {
+#secondaryCoverCont {
   position:relative;
   z-index:1;
-  bottom: -40vh;
+  width:100vw;
+  height:114vw;
+  top:-30vw;
+  transition: top 900ms ease-out 800ms;
+}
+#secondaryCoverCont svg {
+  /*filter:contrast(1) saturate(0);
+  -webkit-filter: contrast(1) saturate(0) ;
+  transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);*/
+}
+#secondaryCoverCont svg use{
+  opacity: .05;
+}
+#svgCont {
+  position:relative;
+  z-index:2;
+  top:-114vw;
+  width:100vw;
+  height:114vw;
+}
+svg {
   width:100%;
-  -webkit-clip-path: polygon(
-  	0px 60px,
-  	1920px 0px,
-  	1920px 1685px,
-  	0px 1685px,
-  	0px 1450px,
-  	1920px 1395px,
-  	1920px 1195px,
-  	0px 1145px
-  );
-  background-color:rgb(251,251,251);
-  overflow:hidden;
+  height:100%;
+  font-family: 'Roboto Condensed', sans-serif;
 }
-#second img {
-  width:130%;
-  height:auto;
-  opacity:.04;
-  filter: grayscale(100%);
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#mainGlobalGroup,#secondaryCoverGroup {
+  transition: transform 450ms ease-out;
+  transform:translateY(var(--scroll));
 }
-#socialBg {
-  background-color:rgba(240,0,0,.25);
-  position: fixed;
-  z-index: 1;
-  bottom:-18vh;
-  right:20vw;
-  width:35vw;
-  height: 13vw;
-  border-radius: 35px;
+.scroll {
+  --scroll:calc(var(--scroll) + var(--scroll));
 }
-</style>    
-</head>	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#mainSlider {
+  transform:translateY(1400px);
+  transition: transform 800ms ease-out 900ms;
+}
+.unhideMainSlider {
+}
+.mainSlideAnimation {
+  animation: slideFade 1500ms ease-out forwards;
+  -webkit-animation: slideFade 1500ms ease-out forwards;
+}
+@keyframes slideFade {
+  0%,5%,95%,100% {opacity:1}
+  48%,60% {opacity:0}
+}
+@-webkit-keyframes slideFade {
+  0%,5%,95%,100% {opacity:1}
+  48%,60% {opacity:0}
+}
+#leaguesTitle, #mainSliderTitle tspan:nth-child(1) {
+  font-size: 20px;
+  font-weight: 800;
+  stroke:none;
+  fill:rgb(213,0,0);
+}
+#mainSliderTitle tspan:nth-child(2) {
+  font-size: 50px;
+  font-weight: 800;
+  fill:rgb(255,255,255);
+}
+.mainArrowTrap {
+  cursor:pointer;
+  fill:rgba(0,0,0,0);
+}
+#mainSliderTimeline {
+  stroke-dasharray:1020;
+  stroke-dashoffset:1020;
+}
+.mainTimelineAnimation {
+  stroke-dasharray:1020px;
+  stroke-dashoffset:1020px;
+  animation: timelineRun 850ms ease-out forwards;
+  -webkit-animation: timelineRun 850ms ease-out forwards;
+  --dashoffset-begin:1020px;
+  --dashoffset-end:1020px;
+}
+@keyframes timelineRun {
+  0% {stroke-dashoffset:var(--dashoffset-begin);}
+  100% {stroke-dashoffset:var(--dashoffset-end);}
+}
+#secondaryContent {
+  opacity: 1;
+  transition: opacity 800ms ease-out 1650ms;
+}
+#secondaryCoverImage {
+  opacity: 0;
+  transition: opacity 500ms ease-out;
+}
+#semiSliderTitle {
+  color:white;
+  font-weight:400;
+  font-size:34px;
+}
+#newsHeader {
+}
+#newsHeader tspan:nth-child(1) {
+  font-size:20px;
+  font-weight:800;
+}
+#newsHeader tspan:nth-child(2) {
+}
+.newsRow tspan {}
+.newsRow tspan:nth-child(1) {
+  font-size: 18px;
+  font-weight:600;
+}
+#sliderData,.newsRow tspan:nth-child(2) {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  fill: rgb(143,143,143);
+}
+#matchesHeader tspan {
+}
+#matchesHeader tspan:nth-child(1) {
+  font-size:20px;
+  font-weight:800;
+}
+#matchesHeader tspan:nth-child(2) {
+}
+.dateRow tspan {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+}
+.dateRow tspan:nth-child(2) {
+  fill: rgb(143,143,143);
+}
+.date {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  fill: rgb(80,80,80);
+}
+.teamA, .teamB {
+  font-size: 18px;
+  font-weight:600;
+}
+.twich,.matchesRow tspan:nth-child(3) {
+  font-family: 'Roboto', sans-serif;
+  fill: rgb(80,80,80);
+  font-size: 14px;
+}
+#leaguesRow tspan {
+  font-size: 18px;
+  font-weight:800;
+  fill: rgb(143,143,143);
+}
+#leaguesRow tspan:nth-child(odd){
+  fill: rgb(247,247,247);
+}
+.seriesCover {
+  cursor:pointer;
+  opacity:.6;
+}
+.activeSeries {
+  opacity:1;
+}
+#locationRow tspan {
+  font-size: 23px;
+  font-weight:800;
+  fill: rgb(43,41,41);
+}
+#description tspan {
+  font-family: 'Roboto', sans-serif;
+  fill: rgb(120,120,120);
+  font-size: 17px;
+  font-weight:300
+}
+#series  {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight:800;
+}
+#series tspan:nth-child(1) {
+   fill:rgb(224,27,27);
+}
+#series tspan:nth-child(2) {
+   fill:rgb(43,41,41);
+}
+#learnMore tspan {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+}
+#learnMore tspan:nth-child(1) {
+  cursor:pointer;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight:800;
+}
+
+#learnMore tspan:nth-child(2) {
+  font-family: 'Roboto', sans-serif;
+  fill: rgb(110,110,110);
+  font-size: 14px;
+  font-weight:300;
+}
+#clickLearnMore:hover {
+  text-decoration: underline;
+}
+#footerRow tspan {
+  fill: rgb(247,247,247);
+  font-size: 14px;
+  font-weight:800;
+}
+#footerDescr {
+  font-family: 'Roboto', sans-serif;
+  fill: rgb(143,143,143);
+  font-size: 15px;
+  font-weight:300;
+}
+#copy {
+  font-family: 'Roboto', sans-serif;
+  fill: rgb(143,143,143);
+  font-size: 11px;
+  font-weight:800;
+}
+</style>   
+</head> 
 <body>
-<div id='cont'>
-  <div id='first'>
-    <div id='socialBg'></div>
-    <div id='coverBlur'>
-      <img src='http://images.says.com/uploads/story_source/source_image/33850/35e1.jpeg' id='bgBlur'/>
-    </div>
+<header>
+  <div id='topHeaderFragment'></div>
+  <div id='bottomHeaderFragment'></div>
+</header>
+<div id='mainWrapper'>
+  <div id='mainCoverCont'>
+    <svg viewBox='0 633 1920 1080' preserveAspectRatio='xMidYMax meet'>
+      <g class='mainAnimationClassRefresh'>  
+        <image id='mainSlideCover' class='mainSlideAnimation' xlink:href='' x='-155' y='-780' width='2250' height='1100'/>
+      </g>
+    </svg>
   </div>
-  <div id='second'>
-    <img src='images/community_image_1418402204.png'/>
+  <div id='secondaryCoverCont'>
+    <svg viewBox='0 625 1920 1080' preserveAspectRatio='xMidYMax meet'>
+    <defs>
+      <mask id='secondaryCoverMask' maskUnits='objectBoundingBox'>
+        <path id='secondaryCoverImage' d='m -2,50 l 1924,-40 0,1400 -1924,0 z' stroke='none' fill='rgba(255,255,255,.045)'/>
+      </mask>
+    </defs>
+    <g id='secondaryCoverGroup' class='scroll'>
+      <path d='m -2,50 l 1924,-40 0,1400 -1924,0 z' stroke='none' fill='rgba(244,244,244,1)'/>
+      <image class='secondaryAnimationClassRefresh' class='mainSlideAnimation' mask='url(#secondaryCoverMask)' xlink:href='' x='-155' y='-15' width='2250' height='1100'/>
+    </g>
+    </svg>
   </div>
-</div>		
+  <div id='svgCont'>
+  <svg viewBox='0 625 1920 1080' preserveAspectRatio='xMidYMax meet'>
+    <defs>
+    <filter id='mainCoverFilter'>
+
+    </filter>
+      <mask id='mainSliderMask'>
+        <path d='m 477,-370 l 966,0 21,469 -1008,0 z' fill='white'/>
+      </mask>
+      <path id='mainArrowTrap' d='m 455,-80 l 105,55 50,120 -285,0 z' fill='rgba(0,0,0,0)'/>
+      <linearGradient id='mainSliderShadow' x1='1' y1='1'>
+        <stop offset='0%'  stop-color='rgba(40,40,40,1)'/>
+        <stop offset='10%' stop-color='rgba(40,40,40,1)'/>
+        <stop offset='30%' stop-color='rgba(40,40,40,.6)'/>
+        <stop offset='40%' stop-color='rgba(40,40,40,.4)'/>
+        <stop offset='95%' stop-color='rgba(40,40,40,0)'/>
+      </linearGradient>
+    </defs>
+    <g id='mainGlobalGroup' class='scroll'>
+      <g id='mainSlider'>
+        <path d='m 477,-370 l 966,0 21,469 -1008,0 z' fill='black'/>
+        <g class='mainAnimationClassRefresh' mask='url(#mainSliderMask)'>  
+          <image id='mainSlide' class='mainSlideAnimation' xlink:href='' x='455' y='-373' width='1010' height='475'/>
+        </g>
+        <g id='mainSliderUi' mask='url(#mainSliderMask)'>
+          <rect x='455' y='-370' width='1010' height='470' fill='url(#mainSliderShadow)'/> 
+          <image xlink:href='images/leftArrow.png' x='515' y='5' width='9' height='14'/>
+          <image xlink:href='images/rightArrow.png' x='1397' y='5' width='9' height='14'/>
+          <g class='mainAnimationClassRefresh'>
+          <text id='mainSliderTitle' class='mainSlideAnimation' text-anchor='middle'>
+            <tspan x='960' y='-15' >TEAM MALAYSIA ADVANCE</tspan>
+            <tspan x='960' y='45'>SLTV SEA PLAY-OFF</tspan>
+          </text>
+          </g>
+          <g>
+            <use class='mainArrowTrap' href='#mainArrowTrap'/>
+            <use class='mainArrowTrap' href='#mainArrowTrap' transform="translate(780,0) scale(-1, 1)" transform-origin='570 -0'/>
+          </g>
+          <path d='m 455.3,105 l 23.5,-474 962.8,0 23.1,474' style='stroke:rgb(50,50,50);stroke-width:1.5px;fill:none'/>
+        </g>
+        <path id='mainSliderTimelineCover' stroke='rgb(175,175,175)' stroke-width='3' d='m 455,102 l 1010,0'/>
+        <g class='mainAnimationClassRefresh'>
+          <path id='mainSliderTimeline' class='mainTimelineAnimation' stroke='rgb(224,27,27)' stroke-width='4' d='m 455,101 l 1010,0'/>
+        </g>
+      </g>
+      <g id='secondaryContent'>
+        <image id='partnersAndEllipse' xlink:href='images/partnersAndEllipse.png' x='445' y='114' width='1010' height='135'/>
+      </g>
+    </g>
+  </svg>  
+  </div>
+</div>
+<div id='cashCont'>
+</div>
 <script>
+var i = 0,
+scenario = null,
+screenSwitcher = 'main',
+mainObj = {
+  "mainSlider" : [
+    ["images/slide0.png","TEAM MALAYSIA ADVANCE","SLTV SEA PLAY-OFF"],
+    ["images/slide1.png","gameplay update","backdoor regen increased!"],
+    ["images/slide2.png","Resolut1on","in da OG house!"],
+    ["images/slide3.png","title","semiTitle"],
+    ["images/slide4.png","Dota Summit 8","Смотри вместе с нами!"],
+    ["images/slide5.png","title","semiTitle"]
+  ]
+},
+wheelArray = [],
+oldDelta = -1,
+scrollData = 0,
+scrollCycle = null;
 $('document').ready(function(){
-  var 
-    bh = $('body').height(),
-    wh = $(window).height();
-    console.log(bh,wh);
-  $('#cont').height(wh*2);
-  $('#second').height((wh*60)/100+wh);
+  $(window).scrollTop(0);
+  $('header').addClass('headerIn');
+  initiation();
+  //sliderRecharge();
+});
+
+function cash0() {
+  $('#mainSlide,#mainSlideCover').attr('xlink:href',Object.values(mainObj)[0][i][0]);
+}
+function cash1() {
+  $('.secondaryAnimationClassRefresh').attr('xlink:href',Object.values(mainObj)[0][4][0]);
+}
+function cash2() {
+  $('#mainSlider').css('transform','translateY(0px)');
+  $('#secondaryCoverCont').css('top','0vw');
+}
+function cash3() {
+}
+function cash4() {
+}
+function cash5() {
+  sliderRecharge();
+}
+
+function initiation() {
+  $.each(mainObj.mainSlider, function() {
+    var preloadStep = window['cash'+i];
+    cashedImg = new Image();
+    cashedImg.onload = setTimeout(preloadStep(),4);
+    cashedImg.src = Object.values(mainObj)[0][i][0];
+    $('#cashCont').append(cashedImg);
+    i++;
+  });
+  i=0;
+}
+
+function sliderRecharge() {
+  scenario = setInterval(function(){
+    timelineRunForward();
+    contentRefresh();
+  },4500);
+}
+function contentRefresh() {
+  $('.mainAnimationClassRefresh').children(0).each(function(){
+    var el = $(this),
+    newone = el.clone(true);
+    el.before(newone);
+    $(this).remove();
+  });
+  setTimeout(function(){
+    if (i<3) {
+      i++; 
+      $('.'+screenSwitcher+'AnimationClassRefresh image').attr('xlink:href',Object.values(mainObj)[0][i][0]);
+      $('#'+screenSwitcher+'SliderTitle tspan').eq(0).text(Object.values(mainObj)[0][i][2].toUpperCase());
+      $('#'+screenSwitcher+'SliderTitle tspan').eq(1).text(Object.values(mainObj)[0][i][1].toUpperCase());
+    }
+    else {
+      i=0;
+      $('.'+screenSwitcher+'AnimationClassRefresh image').attr('xlink:href',Object.values(mainObj)[0][i][0]);
+      $('#'+screenSwitcher+'SliderTitle tspan').eq(0).text(Object.values(mainObj)[0][i][2].toUpperCase());
+      $('#'+screenSwitcher+'SliderTitle tspan').eq(1).text(Object.values(mainObj)[0][i][1].toUpperCase());
+    }
+  },700);
+}
+$(document).on('click','.'+screenSwitcher+'ArrowTrap',function(){
+  sliderFreeze();
+  if ($(this).index()==0) {
+    if (i>0) {
+      i=i-2;
+      timelineRunBack();
+      contentRefresh();
+    }
+    else {
+      i = 2;
+      timelineRunBack();
+      contentRefresh();
+    }
+  }
+  else {
+    timelineRunForward();
+    contentRefresh();
+  }
+});
+function sliderFreeze() {
+  clearInterval(scenario);
+  setTimeout(sliderRecharge(),4500);
+}
+function timelineRunForward() {
+  if (i<3) {
+    $('.'+screenSwitcher+'TimelineAnimation').get(0).style.setProperty('--dashoffset-begin',1020-340*(i)+'px');
+    $('.'+screenSwitcher+'TimelineAnimation').get(0).style.setProperty('--dashoffset-end',1020-340*(i+1)+'px');
+  }
+  else {
+    $('.'+screenSwitcher+'TimelineAnimation').get(0).style.setProperty('--dashoffset-begin','0px');
+    $('.'+screenSwitcher+'TimelineAnimation').get(0).style.setProperty('--dashoffset-end','1020px');
+  }
+}
+function timelineRunBack() {
+  if (i<2) {
+    $('.'+screenSwitcher+'TimelineAnimation').get(0).style.setProperty('--dashoffset-begin',1020-340*(i+2)+'px');
+    $('.'+screenSwitcher+'TimelineAnimation').get(0).style.setProperty('--dashoffset-end',1020-340*(i+1)+'px');
+  }
+  else {
+    $('.'+screenSwitcher+'TimelineAnimation').get(0).style.setProperty('--dashoffset-begin','1020px');
+    $('.'+screenSwitcher+'TimelineAnimation').get(0).style.setProperty('--dashoffset-end','0px');
+  }
+}
+
+$(window).on('mousewheel', function(event){
+  clearInterval(scenario);
+  var delta = Math.round(event.originalEvent.deltaY);
+  wheelArray.push(delta);
+  clearTimeout(scrollCycle);
+  scrollCycle = setTimeout(function (){
+  if (wheelArray.length<5||scrollData==-608) {
+    if (delta>oldDelta) {
+      if (scrollData==0) {scrollData = -608;$('#secondaryCoverImage').css('opacity',1);$('header').css('top','-3.33vw');}
+      else if (scrollData==-608) {scrollData= -1308;}
+      oldDelta = delta-1;
+    }
+    else if (delta<oldDelta) {
+      if (scrollData> -1308&&scrollData< 0) {scrollData= 0;$('header').css('top','0vw');$('#secondaryCoverImage').css('opacity',0);}
+      else if (scrollData== -1308) {scrollData= -543;$('header').css('top','0vw');}
+      oldDelta = delta+1;
+    }
+  }
+  else {
+    if (delta>oldDelta) {scrollData = -1308;$('header').css('top','-3.33vw');}
+    else {scrollData = 0;$('header').css('top','0vw');}
+  }
+  $('#mainGlobalGroup').get(0).style.setProperty('transform','translateY('+scrollData+'px');
+  setTimeout(function(){
+    $('#secondaryCoverGroup').get(0).style.setProperty('transform','translateY('+scrollData+'px');
+    wheelArray = [];
+  },450);
+  sliderFreeze();
+},350);
 });
 </script>
 </body>
